<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/hipman"
        android:layout_height="wrap_content"
        android:contentDescription="@string/backimage_description"
        android:scaleType="fitStart"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"

        />

    <ImageView
        android:src="@drawable/ic_tent"
        android:id="@+id/imageView"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp" />


    <!--<TextView-->
        <!--android:id="@+id/title"-->
        <!--style="@style/AuthTitle"-->
        <!--/>-->

    <!--<TextView-->
        <!--android:id="@+id/subtitle"-->
        <!--style="@style/AuthTitle"-->
        <!--android:textSize="15sp"-->
        <!--android:layout_below="@id/title"-->
        <!--android:text="@string/slogan"-->
        <!--android:layout_alignParentTop="false"-->
        <!--android:layout_marginTop="0dp" />-->

    <LinearLayout
        android:id="@+id/keysLayout"
        style="@style/AuthFieldContainer"
        android:layout_below="@id/imageView"
        android:layout_marginTop="10dp"
        android:alpha="0.9">

    <EditText
        android:id="@+id/usernamefield"
        android:hint="@string/username_hint"
        tools:focusable="false"
        android:layout_alignParentLeft="true"
        android:textSize="17sp"
        android:textColorHint="@color/light_grey"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle"
        android:layout_width="match_parent">
        <requestFocus/>
    </EditText>


    <EditText
        android:id="@+id/passwordfield"
        android:hint="@string/password_hint"
        android:inputType="textPassword"

        android:layout_alignParentLeft="true"
        android:textSize="17sp"
        android:textColorHint="@color/light_grey"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle"
        android:layout_width="match_parent" />

    <EditText
        android:id="@+id/emailfield"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_alignParentLeft="true"
        android:textSize="17sp"
        android:textColorHint="@color/light_grey"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle"
        android:layout_width="match_parent" />

    </LinearLayout>

<ImageView
    android:id="@+id/buttonDivider"
    android:src="@drawable/button_divider"
    style="@style/MYIV" />

    <Button
        android:id="@+id/signupbutton"
        android:text="@string/signup_button_label"
        android:layout_below="@+id/keysLayout"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/button_custom"
        android:textColor="@color/textColor" />

    <Button
        android:id="@+id/cancelbutton"
        android:text="@string/cancel_button_label"
        android:layout_below="@+id/keysLayout"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"

        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/button_custom"
        android:textColor="@color/textColor" />
</RelativeLayout>
