<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark">
    <!--android:background="@drawable/background_fill"-->


    <ImageView
        android:id="@+id/backgroundImage"
        android:src="@drawable/girl"
        android:scaleType="fitStart"
        android:layout_alignParentLeft="true"
        android:layout_height="match_parent"
        android:contentDescription="@string/backimage_description"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="-50dp" />



    <ImageView
        android:src="@drawable/ic_tent"
        android:id="@+id/imageView"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp" />

    <!--<TextView-->
        <!--android:id="@+id/title"-->
        <!--style="@style/AuthTitle"-->
        <!--android:layout_marginTop="10dp" />-->

    <!--<TextView-->
        <!--android:id="@+id/subtitle"-->
        <!--style="@style/AuthTitle"-->
        <!--android:textSize="15sp"-->
        <!--android:layout_below="@id/title"-->
        <!--android:text="@string/slogan"-->
        <!--android:layout_alignParentTop="false"-->
        <!--android:layout_marginTop="0dp" />-->

    <LinearLayout
        android:id="@+id/keysLayout"
        style="@style/AuthFieldContainer"
        android:layout_marginTop="20dp"
        android:layout_below="@id/imageView"
        android:alpha="0.9">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameTIL">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTIL">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="password"
                android:imeActionId="666"
                android:imeActionLabel="Custom"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <Button
        android:id="@+id/loginbutton"
        android:text="@string/LoginButton_text"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        android:layout_below="@id/keysLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/button_custom"
        android:textColor="@color/textColor" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_text"
        android:text="@string/signup_text"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/loginbutton"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        />
    <!--android:onClick="onClick"-->
    <!--android:clickable="true"-->

</RelativeLayout>
